# SuperBrain

./: .env.example  .gitignore  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml
build-stages/: README.md  block-01-foundation.md  block-02-delivery.md  block-03-scraping.md  block-04-ingestion.md  block-05-classification.md  block-06-qa.md  block-07-digest.md  block-08-observability.md
docs/: AGENTIC_FLOW.md  ARCHITECTURE.md  DATA_FLOW.md  README.md  architecture.md  flow-diagrams.md  operations-observability.md  storyboard.html  system-diagram.md  tweaks.jsx
grafana/dashboards/: superbrain.json
grafana/provisioning/dashboards/: default.yml
grafana/provisioning/datasources/: postgres.yml
migrations/: env.py  script.py.mako
migrations/versions/: 0001_create_core_extensions_and_articles.py  001_enable_pgvector.py  002_create_ingestion_jobs.py  003_add_raw_text_to_ingestion_jobs.py  004_add_articles_chunks_model_call_logs.py  005_add_query_logs_and_fts.py  006_add_digest_tables.py  007_add_trace_columns.py  b2d65e7d401c_add_topics_and_article_topic_matches_.py
observability/grafana/dashboards/: superbrain-overview.json
observability/prometheus/: prometheus.yml
presentation/: Superbrain Talk.html
scripts/: eval_retrieval.py  eval_set.json  reembed_corpus.py
src/superbrain/: __init__.py  logging_config.py  main.py  middleware.py  settings.py
src/superbrain/api/: health.py
src/superbrain/app/: __init__.py  errors.py  main.py
superbrain/: package-lock.json  package.json
tests/: test_chunking_agent.py  test_classification.py  test_qa.py  test_query_analysis.py  test_reranker.py  test_url_routing.py  test_url_utils.py
tests/integration/: test_digest_api.py  test_health.py  test_ingestion_api.py  test_qa_api.py  test_topics_api.py
tests/integration/observability/: test_exception_mapping.py  test_system_ops_endpoints.py
tests/unit/: test_chunking.py  test_citation_builder.py  test_deduplication.py  test_digest_dedupe.py  test_digest_grouping.py  test_eval_harness.py  test_observability.py  test_retrieval_fusion.py  test_settings.py  test_topic_service.py  test_topic_versioning.py  test_url_canonicalization.py
tests/unit/observability/: test_instrumentation_helpers.py  (+2 more)
(+125 files in other folders)
