[project]
name = "superbrain"
version = "0.1.0"
description = "Local-first personal article intelligence assistant"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.15.0",
  "fastapi>=0.115.0",
  "httpx>=0.28.0",
  "opentelemetry-api>=1.31.0",
  "pgvector>=0.4.0",
  "prometheus-client>=0.21.0",
  "psycopg[binary]>=3.2.0",
  "pydantic-settings>=2.8.0",
  "sqlalchemy>=2.0.38",
  "uvicorn[standard]>=0.34.0",
]

[dependency-groups]
dev = [
  "mypy>=1.15.0",
  "pre-commit>=4.2.0",
  "pytest>=8.3.0",
  "pytest-cov>=6.0.0",
  "ruff>=0.11.0",
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
packages = ["superbrain"]

[tool.uv]
package = true
