[project]
name = "superbrain"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "structlog>=24.0",
    "httpx>=0.27",
    "python-ulid>=2.0",
    "python-telegram-bot[webhooks]>=21.0",
    "typer>=0.12",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "chardet>=5.0",
    "spider-client>=0.0.27",
    "nltk>=3.8",
    "tiktoken>=0.7",
    "pgvector>=0.3",
    "apscheduler>=3.10",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/superbrain"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
"**/chunking_agent.py" = ["E501"]

[project.scripts]
superbrain = "superbrain.app.cli.commands:app"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
